<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="cpsc466.ecs.fullerton.edu.cpsc466.MainActivity4_Name_Plan">



        <EditText
            android:id="@+id/planNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/plan_s_name"
            android:inputType="textPersonName"
            android:paddingTop="50dp"
            android:textColor="#ffffff"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="9dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/planMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/plan_s_month"
                android:paddingTop="50dp"
                android:textColor="#ffffff"
                android:textSize="36sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="9dp" />

            <EditText
                android:id="@+id/planDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/plan_s_date"
                android:paddingTop="50dp"
                android:textColor="#ffffff"
                android:textSize="36sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="9dp" />

            <EditText
                android:id="@+id/planYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/plan_s_year"
                android:paddingTop="50dp"
                android:textColor="#ffffff"
                android:textSize="36sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="9dp" />
        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToAddDestinations"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:text="@string/next" />


    </LinearLayout>