<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        tools:context="cpsc466.ecs.fullerton.edu.cpsc466.MainActivity5_Choose_Destinations">

        <ScrollView
            android:id="@+id/verticalMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
            android:id="@+id/scrollMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="0dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="586dp"
                    android:layout_height="410dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/city_of_fullerton" />

                <CheckBox
                    android:id="@+id/robot4Less"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="352dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="ClickMe"
                    android:tag="7"
                    android:text="ROBOT4LESS"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.301"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.932" />

                <CheckBox
                    android:id="@+id/westCoastRecyclingCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:onClick="ClickMe"
                    android:tag="8"
                    android:text="West Coast Recycling Center"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.144"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.823" />

                <CheckBox
                    android:id="@+id/fullertonGolfCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:allowUndo="true"
                    android:button="@null"
                    android:checked="false"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="ClickMe"
                    android:tag="4"
                    android:text="Fullerton Golf Course"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.394"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.276" />

                <CheckBox
                    android:id="@+id/starBucks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:onClick="ClickMe"
                    android:tag="1"
                    android:text="Starbucks"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.914"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.447" />

                <CheckBox
                    android:id="@+id/stJudeMedicalCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="ClickMe"
                    android:tag="9"
                    android:text="St Jude Medical Center"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.358"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.411" />

                <CheckBox
                    android:id="@+id/fullertonElksLodge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="ClickMe"
                    android:tag="3"
                    android:text="Fullerton Elks Lodge"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.403"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.535" />

                <CheckBox
                    android:id="@+id/kashmirApartment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="ClickMe"
                    android:tag="2"
                    android:text="Kashmir Apartment"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.368"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.685" />

                <CheckBox
                    android:id="@+id/fullertonMetroCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="ClickMe"
                    android:tag="6"
                    android:text="Fullerton Metro Center"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.363"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.977" />

                <CheckBox
                    android:id="@+id/fullertonCollege"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:onClick="ClickMe"
                    android:tag="10"
                    android:text="Fullerton College"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.663"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.685" />

                <CheckBox
                    android:id="@+id/fullertonTownCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:onClick="ClickMe"
                    android:tag="5"
                    android:text="Fullerton Town Center"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.626"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.913" />

                <CheckBox
                    android:id="@+id/fullertonCommunityCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:onClick="ClickMe"
                    android:tag="0"
                    android:text="Fullerton Community Center"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.599"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.823" />

            </android.support.constraint.ConstraintLayout>
        </HorizontalScrollView>
        </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calculateNewPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:onClick="calculateAndDisplay"
            android:text="@string/calculate"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/discardAllChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:onClick="discardAllOptions"
            android:text="@string/discard"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="#ffffff" />
    </LinearLayout>

    </LinearLayout>
